# Sigma-encryptor

./: .gitignore  CMakeLists.txt  TODO.md  TODO_LINUX.md
build_linux/: CMakeCache.txt
scripts/: install_deps_linux.sh
src/: application.cpp  application.hpp  main.cpp
src/crypto/: aes.cpp  aes.hpp  chacha20.cpp  chacha20.hpp  encryptor.cpp  encryptor.hpp
src/gui/: file_dialog.cpp  file_dialog.hpp  renderer.cpp  renderer.hpp  theme.cpp  theme.hpp  ui.cpp  ui.hpp
text/: BUILD.md  FIXES_PLAN.md  TODO.md  build_project.bat
